# sfincs_jax

./: .gitignore  README.md  plan.md  pyproject.toml
docs/: api.rst  conf.py  contributing.rst  examples.rst  fortran_comparison.rst  fortran_examples.rst  index.rst  inputs.rst  installation.rst  method.rst  normalizations.rst  outputs.rst  paper_figures.rst  parallelism.rst  parity.rst  performance.rst  performance_techniques.rst  physics_models.rst  physics_reference.rst  references.rst  release_checklist.rst  system_equations.rst  upstream_docs.rst  usage.rst  utils.rst
examples/: .gitignore  00_compare_geometry_scheme4.py  README.md
scripts/: compare_fortran_matrix_to_jax_operator.py  compare_petsc_operator.py  compare_rhsmode1_diagnostics_from_state.py  compare_v3_example_suite.py  generate_fortran_example_audit.py  generate_fortran_example_output_status.py  generate_fortran_fixture.py  generate_readme_fast_branch_audit.py  generate_readme_reduced_suite_table.py  profile_transport_traces.py  run_reduced_upstream_suite.py  run_scaled_example_suite.py
sfincs_jax/: __init__.py  ambipolar.py  boozer_bc.py  classical_transport.py  cli.py  collisionless.py  collisionless_er.py  collisionless_exb.py  collisions.py  compare.py  diagnostics.py  fortran.py  geometry.py  grids.py  implicit_solve.py  indices.py  input_compat.py  io.py  magnetic_drifts.py  namelist.py  paths.py  periodic_stencil.py  petsc_binary.py  postprocess_upstream.py  profiling.py  residual.py  scans.py  solver.py  solver_state.py  sparse.py  transport_matrix.py  v3.py  v3_driver.py  v3_fblock.py  (+5 more)
(+388 files in other folders)
